--- a/InfusionMS.Rmd
+++ b/InfusionMS.Rmd
@@ -486,7 +486,7 @@ load4MS("diy2inf_simuls/Harmonia/C_axy_8pars_logTh4/S_obs_table.rda", verbose=TR
 ## 7-parameter version with default controls
 ### Base simulations
 
-```{r N7from17}
+```{r N7from17, message=FALSE }
 modelpath_nickname <- "N_7from17"
 load4MS("diy2inf_simuls/admixtOutOfA/N_7from17/saves4Rmd.rda", verbose=TRUE)
 parms <- names(scaDGP <- unlist(scaDGparlist))
@@ -537,8 +537,9 @@ myplot <- calc_ggplot(scaDGparlist, ecdfs_df, modelpath_nickname,
 print(myplot)
 
 ```
+
 ### Larger datasets (10000 SNPs)
-```{r Human7SNP10K}
+```{r Human7SNP10K, message=FALSE }
 which.p <- "basicLRT"
 modelpath_nickname <- "Q_7from17"
 load4MS("diy2inf_simuls/admixtOutOfA/Q_7from17/saves4Rmd.rda", verbose=TRUE)
@@ -569,9 +570,9 @@ perf_summs <- ad_hoc_fn(ecdfs_df, DGparlist = scaDGparlist, plot.=plot.)
 
 ```
 
-### `Nbn34` at its boundaries
+### $d_3/N_{\textrm{bn34}}$ at its boundaries
 
-```{r ST7from17}
+```{r ST7from17, message=FALSE}
 load4MS("diy2inf_simuls/admixtOutOfA/T_7from17_Nbn34_low/saves4Rmd.rda", verbose=TRUE)
 parms <- names(scaDGP <- unlist(scaDGparlist))
 load4MS("diy2inf_simuls/admixtOutOfA/T_7from17_Nbn34_low/summaries_list.1_400.v2.2.20.rda") 
@@ -685,10 +686,11 @@ print(xyplot)
 ggsave(filename=paste0(MSdir,"logLexplo_Nbn34.pdf"))
 ```
 
-### Inferences by  MAFs
+### Inferences by Masked Autoregressive Flows (MAFs)
 
-#### MAFs on final reference tables only
+MAFs are here computed on the final reference tables only.
 
+#### Inferences
 
 ```{r comparMAFs}
 modelpath_nickname <- "N_7from17_final_MAF"
@@ -741,8 +743,28 @@ myplot <- calc_ggplot(scaDGparlist, ecdfs_zuko, modelpath_nickname,
 print(myplot)
 ```
 
+#### Training times of MAFs
+
+The training times of the MAFs on the final reference tables are shown in the comments of the following code: 
+```{r eval=FALSE}
+if (FALSE) { # The fits are not included in the Supplementary Information 
+  # timings on PC
+  tt <- sapply(1:20, function(it) {
+    load(paste0("../N_7from17_final_MAF/upsliks_",it,".rda"))
+    attr(upsliks$"20K"$conddens,"train_time")
+  })
+  mean(tt) # 448.545
+  
+  # on genotoul cluster: 
+  ttt <- df_extract(ecdfs_df[-(1:20),], "train_times")
+  colMeans(ttt) # 561.4467 for conddens (giving likelihood)
+}
+```
+Timings for "alternative" MAF controls, and for "alternative" controls but with a learning rate of `1e-4`, were 551.63 s and 1244.65 s, respectively (measured on yet another cluster, with more GPU available).
+
+
 ### Alternative sampling function
-```{r N7from17altsampling}
+```{r N7from17altsampling, message=FALSE}
 modelpath_nickname <- "N_7from17"
 load4MS("diy2inf_simuls/admixtOutOfA/N_7from17/saves4Rmd.rda", verbose=TRUE)
 parms <- names(scaDGP <- unlist(scaDGparlist))
@@ -762,10 +784,12 @@ perf_summs <- ad_hoc_fn(ecdfs_df, DGparlist = scaDGparlist, plot.=plot.)
   writeLines(texcode, con=paste0(MSdir,"table", modelpath_nickname,".altsampling.ltx"))
 }
 ```
+
 #### Comparisons on reference tables of 6000 samples
+
 To perform these analyses, make a local modification of the `max_table_size` in 
 the `generic_workflow.R` script.
-```{r N7from17samplings6K}
+```{r N7from17samplings6K, message=FALSE}
 modelpath_nickname <- "N_7from17"
 load4MS("diy2inf_simuls/admixtOutOfA/N_7from17/saves4Rmd.rda", verbose=TRUE)
 parms <- names(scaDGP <- unlist(scaDGparlist))
@@ -796,7 +820,7 @@ writeLines(texcode, con=paste0(MSdir,"table", modelpath_nickname,".samplings6K.l
 
 ### Synthetic reference table
 
-```{r N7from17synth}
+```{r N7from17synth, message=FALSE}
 modelpath_nickname <- "N_7from17"
 load4MS("diy2inf_simuls/admixtOutOfA/N_7from17/saves4Rmd.rda", verbose=TRUE)
 parms <- names(scaDGP <- unlist(scaDGparlist))
@@ -1248,6 +1272,7 @@ myplot <- calc_ggplot(scaDGparlist, ecdfs_df, modelpath_nickname,
 ```{r FigureNI, fig.width = 7, fig.height = 1.5}
 print(myplot)
 ```
+
 ## Test of clustering controls
 
 ### Power rule $n^{0.31}$ versus alternatives
@@ -1352,22 +1377,3 @@ ecdfs_df_nr3 <- rbind(ecdfs_df_nr3a,ecdfs_df_nr3b)
 
 
 
-# Miscellanea
-
-## MAF timings
-... on PC obtained from twenty replicates. Next 180 replicates were computed on `genotoul` cluster:
-```{r eval=FALSE}
-if (FALSE) { # The fits are not included in the Supplementary Information 
-  # timings on PC
-  tt <- sapply(1:20, function(it) {
-    load(paste0("../N_7from17_final_MAF/upsliks_",it,".rda"))
-    attr(upsliks$"20K"$conddens,"train_time")
-  })
-  mean(tt) # 448.545
-  
-  # on genotoul cluster: 
-  ttt <- df_extract(ecdfs_df[-(1:20),], "train_times")
-  colMeans(ttt) # 561.4467 for conddens (giving likelihood)
-}
-```
-Similar computation for "alternative" MAF controls on IMAG cluster: 551.63 s; and for "alternative" but with a learning rate of `1e-4`: 1244.65 s 
